  * Drop references to libnss-files-udeb and libnss-dns-udeb, they're now
    provided by libc-udeb, as of glibc 2.22-5.

  [ Aurelien Jarno ]
  * Stop excluding libc{0.1,0.3,6,6.1} as we now use mklibs-copy for the
    reduction pass. This avoids dropping libnss libraries and also avoids a
    useless download of this udeb during the installation.
  * Drop build-dependency on glibc-pic.

 -- Martin Michlmayr <tbm@cyrius.com>  Tue, 12 Jan 2016 20:28:57 -0800

debian-installer (20160106) unstable; urgency=medium

  [ Samuel Thibault ]
  * Fix missing speech entry in netboot mini.iso:
    - build/util/syslinux-cfgs: Make the list-only behavior include spk.cfg file
    when IS_GTK is 1.
    - build/config/x86.cfg: Set IS_GTK when calling syslinux-cfgs to get the
    list.
  * config/hurd.cfg: Save a few megabytes on initrd to manage to boot with only
    128MiB, only to tell user-who-didn't-read-README to boot with more memory.

  [ Cyril Brulebois ]
  * Switch d-i.debian.org URIs from http to https.

  [ Martin Michlmayr ]
  * Provide u-boot images for plug computers.

  [ Steven Chamberlain ]
  * On kfreebsd, use the new makefs -T parameter to clamp mfsroot
    timestamps to a reproducible maximum value;  raise Build-Depends: on
    makefs to version (>= 20100306-5+kbsd8u1~).

 -- Cyril Brulebois <kibi@debian.org>  Wed, 06 Jan 2016 06:00:19 +0100

debian-installer (20160101) unstable; urgency=medium

  [ Karsten Merker ]
  * Provide u-boot and SD-card images for the LinkSprite pcDuino.

  [ Cyril Brulebois ]
  * Adjust p-u support to handle file:// instead of (f|ht)tp:// only,
    thanks to Łukasz Stelmach for both the report and the patch
    (Closes: #803711).

  [ Samuel Thibault ]
  * Bump hurd kernel version.
  * Prevent spurious speech synthesis boot entry.

  [ Vagrant Cascadian ]
  * bootscr.mainline_common: Prefer newer u-boot distro_bootpart variable.

  [ Cyril Brulebois ]
  * Cherry-pick the following changes by Steven Chamberlain from the